--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,116 @@
     display: flex;
     justify-content: center;
 }
+.localisation{
+    display: flex;
+    justify-content: center;
+    background-color: #EAEAEA;
+}
+
+section h1, section p{
+    display: flex;
+    justify-content: center;
+}
+h2{
+    display: flex;
+    justify-content: center;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+button.button {
+    background-color: #FF79DA;
+    color: white;
+    border-radius: 15px;
+    display: flex;
+    margin: auto;
+    padding: 25px;
+}
+.background{
+    background-color: #f2f2f2;
+    padding-top: 1px;
+    padding-bottom: 20px;
+}
+nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+nav p{
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 25px;
+    background-color: #f6f6f6;
+}
+section img{
+    width: 100%;
+    height: 200px;
+    border-radius: 15px 15px 0px 0px;
+    object-fit: cover;
+}
+
+figure{
+    width: 300px;
+    border-radius: 20px;
+    border: 1px solid #f2f2f2;
+    box-shadow: 10px black;
+}
+figcaption{
+    margin-left: 5px;
+}
+.new{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90px;
+    height: 30px;
+    position: absolute;
+    background-color: #99E2D0;
+}
+.resto{
+    display: flex;
+    flex-wrap: wrap;
+}
+footer{
+    background-color: #353535;
+    padding: 10px;
+}
+footer a{
+    color: white;
+    display: flex;
+    margin: 10px;
+}
+footer p{
+    font-family: 'Shrikhand', sans-serif;
+    color: white;
+    font-size: 24px;
+    display: flex;
+    margin: 10px;
+}
+/* RESPONSIVE */
+/*LARGE*/
+@media screen and (max-width: 1200px) {
+    .resto{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+}
+/*MEDIUM*/
+@media screen and (max-width: 768px) {
+    .resto{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+}
+/*SMALL*/
+@media screen and (max-width: 576px) {
+    .resto{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+    
+}
