--- a/css/style2.css
+++ b/css/style2.css
@@ -2,7 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+    top: 15px;
 }
+
 i.fas.fa-arrow-left {
     font-size: xx-large;
     position: relative;
@@ -16,7 +19,8 @@ i.fas.fa-arrow-left {
     width: 100%;
     height: 350px;
     object-fit: cover;
-    margin-top: 10px;
+    position: relative;
+    top: 45px;
 }
 .logo2 p{
     font-family: 'Shrikhand', sans-serif;
@@ -29,7 +33,7 @@ i.fas.fa-arrow-left {
 .grey{
     background-color: #f2f2f2;
     padding-top: 30px;
-    border-radius: 70px 70px 0px 0px;
+    border-radius: 60px 60px 0px 0px;
 }
 .title{
     display: flex;
@@ -56,54 +60,76 @@ a.bloc-link2{
     flex-wrap: wrap;
     justify-content: space-around;
 }
-.entrees p{
+.entrees{
+    margin-left: 30px;
+}
+.plats{
+    margin-left: 30px;
+}
+.desserts{
     margin-left: 30px;
 }
 .choix,.choix2,.choix3,.choix4{
-    font-size: smaller;
+    font-size: small;
 }
 .choix{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    border: 1px solid black;
-    border-radius: 35px;
-    padding: 25px;
+    border: 1px solid #eee;
+    box-shadow: 0px 0px 10px 0px #00000066;
+    border-radius: 20px;
+    padding: 20px;
     background-color: white;
+    height: 20px;
 }
 .choix2{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    border: 1px solid black;
-    border-radius: 35px;
-    padding: 25px;
+    border: 1px solid #eee;
+    box-shadow: 0px 0px 10px 0px #00000066;
+    border-radius: 20px;
+    padding: 20px;
     background-color: white;
+    height: 20px;
 }
 .choix3{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    border: 1px solid black;
-    border-radius: 35px;
-    padding: 25px;
+    border: 1px solid #eee;
+    box-shadow: 0px 0px 10px 0px #00000066;
+    border-radius: 20px;
+    padding: 20px;
     background-color: white;
+    height: 20px;
 }
 .choix4{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    border: 1px solid black;
-    border-radius: 35px;
-    padding: 25px;
+    border: 1px solid #eee;
+    box-shadow: 0px 0px 10px 0px #00000066;
+    border-radius: 20px;
+    padding: 20px;
     background-color: white;
+    height: 20px;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+    font-size: x-small;
+}
+.text h2,.text p{
+    margin: 0px;
 }
 .prix {
     display: flex;
     justify-content: flex-end;
     position: relative;
     left: 0px;
-    bottom: 50px;
+    top: 5px;
 }
 
 .commander{
@@ -113,7 +139,11 @@ a.bloc-link2{
     padding-bottom: 50px;
 }
 .button{
-    background-color: #AB7EE3;
+    background:linear-gradient(#FF79DA,#AB7EE3);
+    color: white;
+    border-radius: 25px;
+    box-shadow: 0px 0px 10px 0px #00000066;
+    border: #eee;
 }
 footer{
     background-color: #353535;
@@ -134,12 +164,44 @@ i.fas.fa-utensils{
 i.fas.fa-hands-helping{
     margin-right: 10px;
 }
+.position{
+    position: relative;
+}
 /*SMALL*/
 @media screen and (max-width: 576px){
+    body{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    header,footer{
+        width: 100%;
+    }
+    i.fas.fa-arrow-left {
+        font-size: x-large;
+        position: relative;
+        right: 50px;
+    }
+    i.far.fa-heart{
+        display: flex;
+        align-items: center;
+    }
+
     a.bloc-link{
         flex: 1 100%;
     }
     a.bloc-link2{
         flex: 1 100%;
+    }
+    .entrees{
+        margin-left: 0px;
+    }
+    .plats{
+        margin-left: 0px;
+    }
+    .desserts{
+        margin-left: 0px;
+    }
+    p{
+        margin-left: 10px;
     }
 }
