--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,6 @@ figure{
     box-shadow: 0px 0px 10px 0px #00000066;
     position: relative;
 }
-figcaption{
-    margin-left: 5px;
-}
 a.bloc-link{
     flex: 1 25%;
     position: relative;
@@ -146,6 +143,7 @@ i.far.fa-heart {
 .resto{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 footer{
     background-color: #353535;
