--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+body{
+    margin: 0px;
+}
 .logo{
     display: flex;
     justify-content: center;
@@ -120,6 +122,9 @@ figure{
     box-shadow: 0px 0px 10px 0px #00000066;
     position: relative;
 }
+figcaption h3,figcaption p{
+    margin-left: 5px;
+}
 a.bloc-link{
     flex: 1 25%;
     position: relative;
@@ -140,6 +145,14 @@ i.far.fa-heart {
     bottom: 40px;
     font-size: x-large;
 }
+i.fas.fa-heart {
+    position: relative;
+    left: 260px;
+    bottom: 40px;
+    font-size: x-large;
+    background:linear-gradient(#FF79DA,#AB7EE3);
+}
+
 .resto{
     display: flex;
     flex-wrap: wrap;
@@ -185,6 +198,9 @@ i.fas.fa-hands-helping{
         flex-direction: column;
         align-content: center;
     }
+    section h1, section p{
+        text-align: center;
+    }
 }
 /*SMALL*/
 @media screen and (max-width: 576px) {
@@ -193,22 +209,17 @@ i.fas.fa-hands-helping{
         flex-direction: column;
         align-content: center;
     }
+    section h1, section p{
+        text-align: center;
+    }
     nav{
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         align-content: space-around;
     }
-    .choix{
-        margin-top: 20px;
+    .choise{
         margin-bottom: 20px;
     }
-    .menu{
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-    .degustez{
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
+    
 }
