--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0px;
+}
 .haut{
     display: flex;
     align-items: center;
@@ -47,6 +50,10 @@ h1{
 i.far.fa-heart{
     font-size: x-large;
 }
+i.fas.fa-heart {
+    font-size: x-large;
+    background:linear-gradient(#FF79DA,#AB7EE3);
+}
 a.bloc-link{
     flex: 1 30%;
     margin: 10px;
@@ -59,6 +66,10 @@ a.bloc-link2{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+.line{
+    border-bottom: 3px solid #99E2D0;
+    width: 40px;
 }
 .entrees{
     margin-left: 30px;
@@ -76,10 +87,11 @@ a.bloc-link2{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: center;
     border: 1px solid #eee;
     box-shadow: 0px 0px 10px 0px #00000066;
     border-radius: 20px;
-    padding: 20px;
+    padding: 25px;
     background-color: white;
     height: 20px;
 }
@@ -87,10 +99,11 @@ a.bloc-link2{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: center;
     border: 1px solid #eee;
     box-shadow: 0px 0px 10px 0px #00000066;
     border-radius: 20px;
-    padding: 20px;
+    padding: 25px;
     background-color: white;
     height: 20px;
 }
@@ -98,10 +111,11 @@ a.bloc-link2{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: center;
     border: 1px solid #eee;
     box-shadow: 0px 0px 10px 0px #00000066;
     border-radius: 20px;
-    padding: 20px;
+    padding: 25px;
     background-color: white;
     height: 20px;
 }
@@ -109,17 +123,18 @@ a.bloc-link2{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: center;
     border: 1px solid #eee;
     box-shadow: 0px 0px 10px 0px #00000066;
     border-radius: 20px;
-    padding: 20px;
+    padding: 25px;
     background-color: white;
     height: 20px;
 }
 .text{
     display: flex;
     flex-direction: column;
-    font-size: x-small;
+    font-size: small;
 }
 .text h2,.text p{
     margin: 0px;
@@ -130,6 +145,16 @@ a.bloc-link2{
     position: relative;
     left: 0px;
     top: 5px;
+}
+i.fas.fa-check-circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #99E2D0;
+    color: white;
+    height: 70px;
+    width: 50px;
+    border-radius: 0px 20px 20px 0px;
 }
 
 .commander{
