--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ button.button {
 button.button:hover{
     cursor: pointer;
     box-shadow: 0px 0px 20px 0px #00000066;
-    background: #AB7EE3;
+    background: linear-gradient(#f397d9,#b291db);
 }
 .background{
     background-color: #f2f2f2;
@@ -181,6 +181,14 @@ figure{
 }
 figcaption h3,figcaption p{
     margin-left: 5px;
+
+}
+figcaption h3{
+    margin-bottom: 0px;
+    margin-top: 5px;
+}
+figcaption p{
+    margin-top: 0px;
 }
 figcaption{
     display: flex;
@@ -219,8 +227,9 @@ i.fas.fa-heart {
 .fullheart :hover{
     background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
     -webkit-background-clip: text;
-    transition: transform 1000ms linear;
+    transition: transform 1.2s linear;
     transform: scale(1.2);
+    animation: animheart 1s linear;
 }
 
 .resto{
@@ -365,4 +374,16 @@ i.fas.fa-hands-helping{
             opacity: 100%;
             visibility: hidden;
         }
+    }
+
+    @keyframes animheart{
+        0%{
+            transform: translateY(1px);
+            opacity: 0%;
+        }
+        100%{
+            transform: translateY(0px);
+            opacity: 100%;
+        }
+        
     }
