--- a/css/style2.css
+++ b/css/style2.css
@@ -251,6 +251,9 @@ i.fas.fa-check-circle {
     border-radius: 25px;
     box-shadow: 0px 0px 10px 0px #00000066;
     border: #eee;
+    width: 270px;
+    height: 50px;
+    font-size: 1.1em;
 }
 button.button:hover{
     cursor: pointer;
