--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ nav{
     left: -15px;
     top: 20px;
     width: 20px;
+    padding: 5px;
 }
 
 .choise{
@@ -191,7 +192,7 @@ figcaption h3{
     margin-top: 5px;
 }
 figcaption p{
-    margin-top: 0px;
+    margin-top: 5px;
 }
 figcaption{
     display: flex;
@@ -267,7 +268,7 @@ i.fas.fa-hands-helping{
 
 /* RESPONSIVE */
 /*LARGE*/
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1366px) {
     .resto{
         display: flex;
         flex-direction: column;
@@ -283,7 +284,7 @@ i.fas.fa-hands-helping{
         margin: 15px;
     }
     figure{
-        width: 800px;
+        width: 97%;
         margin-bottom: 50px;
     }
     section img{
@@ -295,12 +296,12 @@ i.fas.fa-hands-helping{
     }
     footer a{
         display: flex;
-        align-items: center;
         justify-content: center;
+        align-items: center;
     }
 }
 /*MEDIUM*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .resto{
         display: flex;
         flex-direction: column;
@@ -328,12 +329,15 @@ i.fas.fa-hands-helping{
     }
     footer a{
         display: flex;
-        align-items: center;
         justify-content: center;
+        align-items: center;
     }
 }
 /*SMALL*/
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 667px) {
+    .logo img{
+        width: 200px;
+    }
     .resto{
         display: flex;
         flex-direction: column;
@@ -356,6 +360,15 @@ i.fas.fa-hands-helping{
     }
     .choise{
         margin-bottom: 20px;
+    }
+    footer a{
+        margin-left: 10px;
+    }
+    footer{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
     }
     
 }
