--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,7 @@ footer a{
     color: white;
     display: flex;
     align-items: center;
+    margin-left: 10px;
 }
 i.fas.fa-utensils{
     margin-right: 10px;
@@ -284,7 +285,7 @@ i.fas.fa-hands-helping{
         margin: 15px;
     }
     figure{
-        width: 97%;
+        width: 95%;
         margin-bottom: 50px;
     }
     section img{
