--- a/css/style2.css
+++ b/css/style2.css
@@ -1,6 +1,8 @@
 body{
     margin: 0px;
     font-family: 'Roboto', sans-serif;
+    max-width: 1920px;
+    margin: 0 auto;
 }
 .haut{
     display: flex;
@@ -66,6 +68,7 @@ i.fas.fa-heart {
     font-size: x-large;
     position: relative;
     color: transparent;
+    cursor: pointer;
 }
 .fullheart :hover{
     background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
